--- a/GetNinjas Mobile Test/Base.lproj/LaunchScreen.storyboard
+++ b/GetNinjas Mobile Test/Base.lproj/LaunchScreen.storyboard
@@ -31,7 +31,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                         <constraints>
                             <constraint firstItem="FIO-Ci-KZj" firstAttribute="top" secondItem="u8t-JI-XNm" secondAttribute="bottom" constant="30" id="C1u-aV-ZdT"/>
                             <constraint firstItem="u8t-JI-XNm" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="XP2-Q7-lSg"/>
@@ -47,8 +47,8 @@
     </scenes>
     <resources>
         <image name="GetNinjas" width="33" height="33"/>
-        <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
