--- a/GetNinjas Mobile Test/View/Base.lproj/Main.storyboard
+++ b/GetNinjas Mobile Test/View/Base.lproj/Main.storyboard
@@ -17,11 +17,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="IB8-Xs-0Qs">
-                                <rect key="frame" x="0.0" y="202" width="414" height="660"/>
-                                <color key="backgroundColor" red="0.0" green="0.62920035323699797" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="0.0" y="148" width="414" height="714"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" systemColor="systemBlueColor"/>
                             </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" segmentControlStyle="bordered" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cs7-YU-edD">
-                                <rect key="frame" x="22" y="142" width="370" height="61"/>
+                                <rect key="frame" x="22" y="88" width="370" height="61"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="BWk-xv-DjV"/>
                                 </constraints>
@@ -46,7 +47,7 @@
                             <constraint firstItem="cs7-YU-edD" firstAttribute="leadingMargin" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="yUe-hx-bhd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Pedidos" id="VNm-lD-H7X"/>
+                    <navigationItem key="navigationItem" title="Pedidos" largeTitleDisplayMode="never" id="VNm-lD-H7X"/>
                     <connections>
                         <outlet property="jobOffersSegmentedControl" destination="cs7-YU-edD" id="cxN-xo-X5X"/>
                         <outlet property="jobOffersTableView" destination="IB8-Xs-0Qs" id="Dr3-EH-baB"/>
