--- a/GetNinjas Mobile Test/View/Table View Cell/InfoDetailsTableViewCell.xib
+++ b/GetNinjas Mobile Test/View/Table View Cell/InfoDetailsTableViewCell.xib
@@ -49,6 +49,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="SkC-MQ-ft3"/>
                         </constraints>
