--- a/GetNinjas Mobile Test/View/Table View Cell/TitleDetailsTableViewCell.xib
+++ b/GetNinjas Mobile Test/View/Table View Cell/TitleDetailsTableViewCell.xib
@@ -10,18 +10,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="278" id="KGk-i7-Jjw" customClass="TitleDetailsTableViewCell" customModule="GetNinjas_Mobile_Test" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="808" height="278"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="275" id="KGk-i7-Jjw" customClass="TitleDetailsTableViewCell" customModule="GetNinjas_Mobile_Test" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="411" height="275"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="808" height="278"/>
+                <rect key="frame" x="0.0" y="0.0" width="411" height="275"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cIz-D3-nM0" userLabel="Container View">
-                        <rect key="frame" x="20" y="0.0" width="768" height="278"/>
+                        <rect key="frame" x="20" y="0.0" width="371" height="275"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1C5-qw-JGG" userLabel="Title Label">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="100"/>
+                                <rect key="frame" x="0.0" y="0.0" width="371" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="sEw-Jc-8Nq"/>
                                 </constraints>
@@ -30,14 +30,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JSA-MR-0q8" userLabel="Line View">
-                                <rect key="frame" x="0.0" y="100" width="768" height="2"/>
+                                <rect key="frame" x="0.0" y="100" width="371" height="2"/>
                                 <color key="backgroundColor" systemColor="systemGray2Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="2" id="gGq-7j-wY1"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dkw-LU-HJV" userLabel="Details Stack View">
-                                <rect key="frame" x="0.0" y="102" width="768" height="60"/>
+                                <rect key="frame" x="0.0" y="102" width="371" height="60"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="TSg-iX-IWN" userLabel="Person Icon">
                                         <rect key="frame" x="0.0" y="1.5" width="24" height="57"/>
@@ -46,7 +46,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4g-kQ-rXI" userLabel="Name Label">
-                                        <rect key="frame" x="34" y="0.0" width="734" height="60"/>
+                                        <rect key="frame" x="34" y="0.0" width="337" height="60"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -57,7 +57,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="aig-Br-07N" userLabel="Address Stack View">
-                                <rect key="frame" x="0.0" y="162" width="768" height="60"/>
+                                <rect key="frame" x="0.0" y="162" width="371" height="60"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="251" image="map.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Dww-To-BZZ" userLabel="Address Icon">
                                         <rect key="frame" x="0.0" y="20.5" width="24" height="18.5"/>
@@ -66,10 +66,10 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="m2N-ix-g1T">
-                                        <rect key="frame" x="34" y="0.0" width="734" height="84"/>
+                                        <rect key="frame" x="34" y="0.0" width="337" height="84"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2tE-9Q-SMG" userLabel="Address Label">
-                                                <rect key="frame" x="0.0" y="0.0" width="734" height="60"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="337" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="cOD-ec-4eA"/>
                                                 </constraints>
@@ -78,7 +78,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DU1-SH-5zm" userLabel="Way Label">
-                                                <rect key="frame" x="0.0" y="60" width="734" height="24"/>
+                                                <rect key="frame" x="0.0" y="60" width="337" height="24"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="s55-5u-BfF"/>
                                                 </constraints>
@@ -94,7 +94,7 @@
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dlE-hg-bXW" userLabel="Line2 View">
-                                <rect key="frame" x="0.0" y="270" width="768" height="2"/>
+                                <rect key="frame" x="0.0" y="270" width="371" height="2"/>
                                 <color key="backgroundColor" systemColor="systemGray2Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="2" id="TXL-1K-zIb"/>
@@ -104,6 +104,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="1C5-qw-JGG" firstAttribute="top" secondItem="cIz-D3-nM0" secondAttribute="top" id="4IY-n4-dPT"/>
+                            <constraint firstAttribute="height" constant="275" id="54Y-Xs-XYT"/>
                             <constraint firstItem="1C5-qw-JGG" firstAttribute="leading" secondItem="cIz-D3-nM0" secondAttribute="leading" id="EBA-ia-v2K"/>
                             <constraint firstAttribute="trailing" secondItem="dlE-hg-bXW" secondAttribute="trailing" id="G7M-Me-JJ1"/>
                             <constraint firstItem="dkw-LU-HJV" firstAttribute="leading" secondItem="cIz-D3-nM0" secondAttribute="leading" id="N9A-Z1-1Z5"/>
@@ -138,7 +139,7 @@
                 <outlet property="personIcon" destination="TSg-iX-IWN" id="rPx-Eg-8BU"/>
                 <outlet property="titleLabel" destination="1C5-qw-JGG" id="t6z-yK-giS"/>
             </connections>
-            <point key="canvasLocation" x="1807.2463768115942" y="-138.61607142857142"/>
+            <point key="canvasLocation" x="1463.0434782608697" y="-144.30803571428569"/>
         </tableViewCell>
     </objects>
     <resources>
