--- a/GetNinjas Mobile Test/View/Table View Cell/ContactDetailsTableViewCell.xib
+++ b/GetNinjas Mobile Test/View/Table View Cell/ContactDetailsTableViewCell.xib
@@ -10,30 +10,30 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="208" id="KGk-i7-Jjw" customClass="ContactDetailsTableViewCell" customModule="GetNinjas_Mobile_Test" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="384" height="208"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="207" id="KGk-i7-Jjw" customClass="ContactDetailsTableViewCell" customModule="GetNinjas_Mobile_Test" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="384" height="207"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="384" height="208"/>
+                <rect key="frame" x="0.0" y="0.0" width="384" height="207"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="OXG-dE-YdQ">
-                        <rect key="frame" x="20" y="0.0" width="344" height="182"/>
+                        <rect key="frame" x="20" y="0.0" width="344" height="207"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y7g-bh-8jr" userLabel="Contact View">
-                                <rect key="frame" x="0.0" y="0.0" width="344" height="140.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="344" height="140"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="qxT-eE-d5V">
-                                        <rect key="frame" x="15" y="20" width="314" height="100.5"/>
+                                        <rect key="frame" x="15" y="20" width="314" height="100"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8qF-HJ-W0E" userLabel="Contact Label">
-                                                <rect key="frame" x="0.0" y="0.0" width="314" height="16.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="314" height="16"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="snv-k9-hwM">
-                                                <rect key="frame" x="0.0" y="38.5" width="314" height="20"/>
+                                                <rect key="frame" x="0.0" y="38" width="314" height="20"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="251" image="lock.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="X4X-G5-5R6" userLabel="Phone Icon">
                                                         <rect key="frame" x="0.0" y="0.5" width="20" height="18.5"/>
@@ -51,7 +51,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="3RE-kc-Lle">
-                                                <rect key="frame" x="0.0" y="80.5" width="314" height="20"/>
+                                                <rect key="frame" x="0.0" y="80" width="314" height="20"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="251" image="lock.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XGM-gF-bct" userLabel="Email Icon">
                                                         <rect key="frame" x="0.0" y="0.5" width="20" height="18.5"/>
@@ -82,7 +82,8 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X5R-TK-EEl" userLabel="Message Label">
-                                <rect key="frame" x="0.0" y="160.5" width="344" height="21.5"/>
+                                <rect key="frame" x="0.0" y="160" width="344" height="47"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -93,17 +94,19 @@
                             <constraint firstItem="Y7g-bh-8jr" firstAttribute="leading" secondItem="OXG-dE-YdQ" secondAttribute="leadingMargin" id="Ffj-bt-q54"/>
                             <constraint firstAttribute="bottom" secondItem="X5R-TK-EEl" secondAttribute="bottom" id="Ght-RK-ji5"/>
                             <constraint firstAttribute="trailing" secondItem="X5R-TK-EEl" secondAttribute="trailing" id="ISb-rm-NHF"/>
+                            <constraint firstItem="X5R-TK-EEl" firstAttribute="top" secondItem="OXG-dE-YdQ" secondAttribute="top" constant="160" id="Raa-Z4-qQ2"/>
                             <constraint firstAttribute="trailing" secondItem="Y7g-bh-8jr" secondAttribute="trailing" id="Z4P-ML-wSL"/>
                             <constraint firstItem="Y7g-bh-8jr" firstAttribute="top" secondItem="OXG-dE-YdQ" secondAttribute="top" id="mhX-cZ-MDp"/>
                             <constraint firstItem="X5R-TK-EEl" firstAttribute="leading" secondItem="OXG-dE-YdQ" secondAttribute="leading" id="voc-cD-QS3"/>
                         </constraints>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" red="0.1855918926" green="0.58463318819999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="OXG-dE-YdQ" secondAttribute="trailing" id="J5d-Ul-IpL"/>
                     <constraint firstItem="OXG-dE-YdQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="JE9-8W-twv"/>
                     <constraint firstItem="OXG-dE-YdQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="W0H-f3-XCL"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="OXG-dE-YdQ" secondAttribute="bottom" constant="15" id="mvt-jz-UM3"/>
+                    <constraint firstAttribute="bottom" secondItem="OXG-dE-YdQ" secondAttribute="bottom" id="mvt-jz-UM3"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -116,7 +119,7 @@
                 <outlet property="phoneIcon" destination="X4X-G5-5R6" id="7bn-xn-8DZ"/>
                 <outlet property="phoneLabel" destination="3iO-cd-qHz" id="oGV-9C-cAp"/>
             </connections>
-            <point key="canvasLocation" x="198.55072463768118" y="195.53571428571428"/>
+            <point key="canvasLocation" x="198.55072463768118" y="195.20089285714286"/>
         </tableViewCell>
     </objects>
     <resources>
