--- a/GetNinjas Mobile Test/View/Table View Cell/InfoDetailsTableViewCell.xib
+++ b/GetNinjas Mobile Test/View/Table View Cell/InfoDetailsTableViewCell.xib
@@ -47,6 +47,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -55,6 +56,7 @@
                         </constraints>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" red="0.18431372549019609" green="0.58431372549019611" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="WJ7-Pw-4gs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="AtX-jc-gZE"/>
                     <constraint firstAttribute="trailingMargin" secondItem="WJ7-Pw-4gs" secondAttribute="trailing" id="B0r-rE-dbK"/>
