--- a/GetNinjas Mobile Test/View/Table View Cell/MapDetailsTableViewCell.xib
+++ b/GetNinjas Mobile Test/View/Table View Cell/MapDetailsTableViewCell.xib
@@ -9,17 +9,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="MapDetailsTableViewCell" customModule="GetNinjas_Mobile_Test" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="86"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="155" id="KGk-i7-Jjw" customClass="MapDetailsTableViewCell" customModule="GetNinjas_Mobile_Test" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="155"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="86"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="155"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="KaQ-is-wBO">
-                        <rect key="frame" x="16" y="0.0" width="288" height="86"/>
+                        <rect key="frame" x="16" y="0.0" width="288" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="150" id="dup-2G-q3M"/>
+                        </constraints>
                     </mapView>
                 </subviews>
+                <color key="backgroundColor" red="0.18431372549019609" green="0.58431372549019611" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="KaQ-is-wBO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="16q-M2-y5q"/>
                     <constraint firstAttribute="trailingMargin" secondItem="KaQ-is-wBO" secondAttribute="trailing" id="bkI-Ll-rDM"/>
@@ -31,7 +35,7 @@
             <connections>
                 <outlet property="mapView" destination="KaQ-is-wBO" id="os4-q8-LqL"/>
             </connections>
-            <point key="canvasLocation" x="213.04347826086959" y="103.79464285714285"/>
+            <point key="canvasLocation" x="213.04347826086959" y="126.22767857142857"/>
         </tableViewCell>
     </objects>
 </document>
